--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -5,6 +5,8 @@
 .thing[data-fullname="t3_37lhh4"] .entry a.title::before { font-size: medium !important; content: "SPOILER school's SPOILER team by Uotapo "; }
 .thing[data-fullname="t3_38n7d6"] .entry a.title { font-size:0 !important; }
 .thing[data-fullname="t3_38n7d6"] .entry a.title::before { font-size: medium !important; content: "ACTIVITYing Sunset Shimmer by Yuse-ART "; }
+.thing[data-fullname="t3_3aomqf"] .entry a.title { font-size:0 !important; }
+.thing[data-fullname="t3_3aomqf"] .entry a.title::before { font-size: medium !important; content: "Wondercolt TEAM PRACTICE by Amante "; }
 
 /* Sidebar fixes */
 
