--- a/source-css/mylittlechaos.css
+++ b/source-css/mylittlechaos.css
@@ -250,6 +250,14 @@ a[href|="/yasickfuck"], a[href|="/yasickfreak"] {
     clear: none;
     float: left;
     }
+a[href|="/yaksmashing"], a[href|="/smashingyak"] {
+    width: 122px;
+    height: 140px;
+    background-image: url(%%yaksmashing%%);
+    display: block;
+    clear: none;
+    float: left;
+    }
 
 /*==  Flair ==*/
 /*
