--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -741,6 +741,17 @@ a[href|="/randyrules"] {
     background-image: url(%%Pspritesheet%%) !important
     }
 
+a[href|="/imsorry"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 164px;
+    height: 250px;
+	background-position: -292px -443px;
+    background-image: url(%%Pspritesheet%%) !important
+    }
+
+
 /*Side Bar*/
 
 .titlebox strong {
