--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -1178,7 +1178,7 @@ a.author[href$="Morichalion"]:before {
 */
     
 a.author[href$="ponytron5000"]:after{content:" - Created the Header!"}
-a.author[href$="Woonie"]:after{color: #D6B52F; content:" - Costume Contest Winner Halloween 2014"}
+a.author[href$="NtmrMoon"]:after{color: #D6B52F; content:" - Costume Contest Winner Halloween 2014"}
 a.author[href$="willowmvp227"]:after{color: #D6B52F; content:" - Costume Contest Winner Halloween 2014"}
 a.author[href$="SeatieBelt"]:after{content:" + __brony__ best ship"}
 a.author[href$="__brony__"]:after{content:" + SeatieBelt best ship"}
