--- a/source-css/troubleshoes.css
+++ b/source-css/troubleshoes.css
@@ -166,15 +166,15 @@ a[href|="/ohcomeon"],a[href|="/sbcomeon"],a[href|="/rohcomeon"],a[href|="/rsbcom
   background-position:0 -600%;
 }
 
-a[href|="/raritypaper"],a[href|="/raritynews"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ajwut"],a[href|="/rajwut"],a[href|="/pinkamina"],a[href|="/rpinkamina"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],.side .md table tr:nth-of-type(15) td:nth-of-type(1):after,.flair-wonderbolts {
+a[href|="/raritypaper"],a[href|="/raritynews"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ajwut"],a[href|="/rajwut"],a[href|="/pinkamina"],a[href|="/rpinkamina"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/ajcry"],a[href|="/rajcry"],.side .md table tr:nth-of-type(15) td:nth-of-type(1):after,.flair-wonderbolts {
   background-position:0 -700%;
 }
 
-a[href|="/twiright"],a[href|="/satistwied"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/abwut"],a[href|="/rabwut"],a[href|="/scootaloo"],a[href|="/rscootaloo"],a[href|="/twiponder"],a[href|="/rtwiponder"],.side .md table tr:nth-of-type(17) td:nth-of-type(1):after,.flair-sweetiebelle {
+a[href|="/twiright"],a[href|="/satistwied"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/abwut"],a[href|="/rabwut"],a[href|="/scootaloo"],a[href|="/rscootaloo"],a[href|="/twiponder"],a[href|="/rtwiponder"],a[href|="/rarityeww"],a[href|="/rrarityeww"],.side .md table tr:nth-of-type(17) td:nth-of-type(1):after,.flair-sweetiebelle {
   background-position:0 -800%;
 }
 
-a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/rarityjudge"],a[href|="/rrarityjudge"],a[href|="/allmybits"],a[href|="/rallmybits"],a[href|="/gilda"],a[href|="/rgilda"],.flair-blueblood {
+a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/rarityjudge"],a[href|="/rrarityjudge"],a[href|="/allmybits"],a[href|="/rallmybits"],a[href|="/gilda"],a[href|="/rgilda"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],.flair-blueblood {
   background-position:0 -900%;
 }
 
@@ -231,7 +231,7 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[h
 .flair-ariablaze
 {background-position:0 -2400%}
 
-a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],a[href|="/hauntedtroubleshoes"],a[href|="/hauntedtsc"],.flair-twilight,.side .md table tr:nth-of-type(1) td:nth-of-type(2):after {
+a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],a[href|="/starlightrage"],a[href|="/rstarlightrage"],a[href|="/hauntedtroubleshoes"],a[href|="/hauntedtsc"],.flair-twilight,.side .md table tr:nth-of-type(1) td:nth-of-type(2):after {
   background-position:-100% 0;
 }
 
@@ -394,6 +394,9 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 
 .flair-doublediamond
 {background-position:-200% -2000%}
+
+.flair-troubleshoes
+{background-position:-200% -2100%}
 
 .flair-roidrage
 {background-position:-200% -2200%}
@@ -611,6 +614,15 @@ a[href|="/troubleshoes"],a[href|="/tsc"],a[href|="/hauntedtroubleshoes"],a[href|
   width:70px;
   height:70px;
   background-image:url(%%TS1%%)!important;
+}
+
+a[href|="/troublecoltlasso"],a[href|="/tsclasso"] {
+  display:block;
+  clear:none;
+  float:left;
+  width:141px;
+  height:150px;
+  background-image:url(%%TS2%%)!important;
 }
 
 .side .md table tbody tr:nth-of-type(odd) td:after {content:"";width:70px;display:block}
