--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -1,5 +1,12 @@
 .id-t3_145m8r.link .title{font-size:large}
 
+/* Rainbow */ 
+a.author, .res a.author {
+    color:white!important;
+    background: -moz-linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
+    background: -webkit-linear-gradient(left, red, orange, yellow, green, blue, indigo, violet);
+}
+
 /* Changes background  */
  body:first-of-type, body.res-nightmode:first-of-type {
     background:  url(%%Explosion%%) fixed no-repeat 66% 100% !important;
@@ -229,11 +236,11 @@ div.titlebox span.word {
     display: none
     }
 div.titlebox span.number:after {
-    content: ",453,950 Sleepy Gammies"
+    content: ",731,468,586,000 Sleepy Gammies"
     }
 div.titlebox .users-online span.number:after
 {
-    content:",593 Wakey Gammies";
+    content:",562,920,000 Wakey Gammies";
 }
 a[href="/spoiler"]:nth-of-type(n) {
     background: #000;
