--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -155,8 +155,8 @@ transition: all 3s linear;
 
 /* CSS last generated on Sat, 16 Feb 2013 02:05:57 -0600 by UNKNOWN on derpy */
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Wedding Guests"}
-div.titlebox .users-online span.number:after {content:" Wrestling Pandas"}
+div.titlebox .subscribers span.number:after {content:" Perfectionist Yaks"}
+div.titlebox .users-online span.number:after {content:" Smashing Everything"}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
@@ -295,10 +295,10 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%derpy-hat%%);
- width:60px;
- height:60px;
- margin-top:-35px;
+ background:url(%%twilight-hat%%);
+ width:65px;
+ height:54px;
+ margin-top:-29px;
  margin-left:10px;
  margin-bottom:0px;
  margin-right:-40px;
